--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-ontonomic-front-end",
-  "version": "0.1.0",
+  "name": "personal-porfolio",
+  "version": "0.1.1",
   "private": true,
   "homepage": "https://alloftheweather.github.io/",
   "dependencies": {
