--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-porfolio",
   "version": "0.1.1",
   "private": true,
-  "homepage": "https://alloftheweather.github.io/home",
+  "homepage": "https://alloftheweather.github.io",
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
